[package]
name = "ggtune"
version = "0.1.0"
authors = ["Lukas Atkinson"]
edition = "2018"

[dependencies]
float-cmp = "0.5.2"  # for float equality, needed for Matérn optimization
ndarray = "0.12.1"  # like NumPy
ndarray-linalg = { version = "0.11" }  # provides Cholesky decomposition
ndarray-stats = "0.2.0"  # summary statistics
noisy_float = "0.1.11"  # needed for quantiles and for convenient sorting
num-traits = "0.2.8"  # provides traits that describe floatishness
openblas-src = "0.7.0"  # statically link OpenBLAS
nlopt = "0.5.1"  # for optimization algos, used for model fitting
itertools = "0.8.0"  # for convenient iteration
lazy_static = "1.3.0"  # for convenient initialization
rayon = "1.1"  # for simple multi-threading
statrs = "0.11.0"  # for random distributions

# the rand crates must share a common rand_core version,
# which prevents us from always using the lastest
rand = "^0.6"
rand_core = "^0.4"
rand_xoshiro = "^0.2"  # a state of the art RNG

[dev-dependencies]
speculate = "0.1.2"

[profile.test]
opt-level = 2  # otherwise, tests run too slow